# pdelie

./: .gitignore  AGENTS.md  API_STABILITY.md  ARCHITECTURE.md  CHANGELOG.md  CONTRACTS_AND_DEFAULTS.md  INTEROPERABILITY_AND_BENCHMARKING.md  LICENSE  LLM_CONTEXT.md  PLAN.md  README.md  ROADMAP.md  SPEC.md  V0_1_CONTRACT_AUDIT.md  V0_1_RELEASE_READINESS.md  V0_1_SCOPE.md  V0_2_RELEASE_READINESS.md  V0_2_SCOPE.md  V0_3_RELEASE_READINESS.md  V0_3_SCOPE.md  V0_4_RELEASE_READINESS.md  V0_4_SCOPE.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/planning/: PLAN.md  ROADMAP.md  V0_1_SCOPE.md  V0_2_SCOPE.md  V0_5_SCOPE.md  V0_6_SCOPE.md  V0_7_PREP.md  V0_7_SCOPE.md
docs/releases/: PUBLISHING.md  V0_1_CONTRACT_AUDIT.md  V0_1_RELEASE_READINESS.md  V0_3_RELEASE_READINESS.md  V0_4_RELEASE_READINESS.md  V0_5_RELEASE_READINESS.md  V0_7_RELEASE_READINESS.md
docs/specs/: API_STABILITY.md  SPEC.md
docs/strategy/: INTEROPERABILITY_AND_BENCHMARKING.md
notebooks/: 00_how_to_use_pdelie_v0_6.ipynb  01_raw_vs_translation_canonical_discovery.ipynb  02_robustness_sweeps.ipynb  03_portability_round_trips.ipynb  04_discovered_vs_known_translation_generators.ipynb  05_closure_algebra_diagnostics.ipynb  README.md
src/pdelie/: __init__.py  contracts.py  errors.py
src/pdelie/data/: __init__.py  burgers_1d.py  heat_1d.py  numpy_adapter.py  robustness.py  xarray_adapter.py
src/pdelie/derivatives/: __init__.py  spectral_fd.py
src/pdelie/discovery/: __init__.py  _pysindy_defaults.py  evaluation.py  pysindy_adapter.py  pysindy_bridge.py  recovery_grid.py  translation_canonical.py
src/pdelie/examples/: __init__.py  heat_vertical_slice.py
src/pdelie/invariants/: __init__.py  apply.py  spec.py
src/pdelie/portability/: __init__.py  _validation.py  (+2 more)
tests/: __init__.py  test_burgers_residual.py  test_closure_runtime.py  test_contracts.py  test_cross_pde_benchmark.py  test_data_numpy_adapter.py  test_data_xarray_adapter.py  test_derivatives.py  test_discovery_evaluation.py  test_downstream_benchmark.py  test_examples.py  test_finite_transform_verification.py  test_heat_residual.py  test_ingestion_parity.py  test_invariant_applier.py  test_invariant_map_spec.py  test_kdv_feasibility.py  test_polynomial_translation.py  test_portability_benchmark.py  test_portability_coercion.py  test_portability_manifest.py  test_public_api.py  test_pysindy_bridge.py  test_pysindy_discovery_adapter.py  test_robustness_utilities.py  test_span_runtime.py  test_symbolic_runtime.py  test_synthetic_burgers.py  test_synthetic_heat.py  test_translation_canonical_discovery_inputs.py  test_v0_4_release_gate.py  test_v0_5_release_gate.py  test_v0_6_release_gate.py  test_v0_7_release_gate.py  test_vertical_slice.py  test_viz_runtime.py
tests/_helpers/: __init__.py  cross_pde_benchmark.py  downstream_benchmark.py  kdv_feasibility.py  portability_benchmark.py
(+20 files in other folders)
