[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pdelie"
version = "0.2.0"
description = "Stable V0.2 core for PDE Lie symmetry discovery on synthetic Heat and Burgers data"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24,<2",
]

[project.optional-dependencies]
downstream = [
  "pysindy>=1.7.5,<2",
  "scikit-learn>=1.2.2,<1.3",
]
test = [
  "build>=1.2",
  "pysindy>=1.7.5,<2",
  "scikit-learn>=1.2.2,<1.3",
  "pytest>=7.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
