[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pdelie"
version = "0.7.0"
description = "V0.7 structured external-data ingestion core with strict NumPy/xarray adapters into canonical FieldBatch plus parity-tested Heat/Burgers symmetry and discovery utilities"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24,<2",
]

# Optional downstream bridge path is currently validated on the
# PySINDy 1.x / scikit-learn 1.2.x line only.
# Broader Python 3.12+ compatibility is intentionally not claimed until validated.
[project.optional-dependencies]
downstream = [
  "pysindy>=1.7.5,<2; python_version < '3.12'",
  "scikit-learn>=1.2.2,<1.3; python_version < '3.12'",
]
xarray = [
  "xarray>=2023.1.0",
]
viz = [
  "matplotlib>=3.7,<4",
]
test = [
  "build>=1.2",
  "matplotlib>=3.7,<4",
  "pysindy>=1.7.5,<2; python_version < '3.12'",
  "scikit-learn>=1.2.2,<1.3; python_version < '3.12'",
  "pytest>=7.4",
  "xarray>=2023.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
